@startuml

class Session {
  token: String
}

class User {
  name: String
  password: String
  type: {CONTESTANT, ADMIN}
}

class Race {
  id: Id
  createdTime: TimeStamp
  startTime: TimeStamp
  splitTime: TimeStamp
  finishTime: TimeStamp
  status: {IDLE, ARMED, STARTED,
  FINISHED, ABORTED}
}

SystemState o--> "sessions [0..n]" Session
SystemState "[userName:String]" o-down--> "registeredUsers [1]" User

Session -left-> "user [1]" User
User "1" o--> "myRaces [0..n]" Race

@enduml
